--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ku" dir="rtl">
 <head>
+	<meta name="google-site-verification" content="R2NuPEpqOdPDY0hPIatYLbLzE4SSAno13c7Vrtz6XAE" />
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content="BTPharma KU - دابینکردنی بەرهەمی دەرمانسازی سەلامەت و کوالێتی بەرز لە ناوچەکەدا.">
@@ -295,4 +296,5 @@
         }
     </script>
 </body>
+
 </html>
