--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="keywords" content="BTPharma ku, دەرمان, تەندروستی, medicine, kurdistan">
     <meta property="og:title" content="BTPharma | تەندروستی پێشکەوتوو">
     <meta property="og:image" content="btlogo.png">
+	<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "WebSite",
+"name": "BTPharma KU",
+"url": "https://miranystudio.github.io/BT.KU/"
+}
+</script>
     <title>BTPharma KU | تەندروستی پێشکەوتوو</title>
 	
     <link rel="icon" href="log.ico" sizes="32x32">
@@ -298,4 +306,5 @@
 </body>
 
 </html>
+
 
