--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 "url": "https://miranystudio.github.io/BT.KU/"
 }
 </script>
-    <title>BTPharma KU | تەندروستی پێشکەوتوو</title>
+    <title>BTPharma KU</title>
 	
     <link rel="icon" href="log.ico" sizes="32x32">
     
@@ -306,5 +306,6 @@
 </body>
 
 </html>
+
 
 
